--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -1,21 +1,124 @@
-<ion-header [translucent]="true">
+<!-- <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
+
     <ion-title>{{ folder }}</ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">{{ folder }}</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <div id="mainContainer">
 
-  <div id="container">
-    <strong class="capitalize">{{ folder }}</strong>
-    <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <div id="topContainer">
+      <div id="topInnerContainer">
+        <div style="display: flex; flex-direction: row; margin-bottom: 16px;">
+          <div id="welcomeMsgContainer">
+            <!-- <ion-button size="large" color="light" fill="clear" (click)="openFirst()">
+              <ion-icon name="menu-outline"></ion-icon>
+            </ion-button> -->
+            <ion-buttons slot="start">
+              <ion-menu-button></ion-menu-button>
+            </ion-buttons>
+
+            <h2>Hello Lahya,</h2>
+            <p>Find & Hire a Handyman. I Have Anough Tools</p>
+          </div>
+
+          <div id="userImgContainer">
+            <ion-avatar (click)="goToProfile()">
+              <img src="../../assets/imgs/user1.jpeg">
+            </ion-avatar>
+          </div>
+        </div>
+
+        <ion-searchbar showCancelButton="focus" cancelButtonText="Custom Cancel"></ion-searchbar>
+
+      </div>
+
+      <div id="bottomInnerContainer">
+        <h4>Categories</h4>
+        <table>
+          <tr>
+            <td align="center">
+              <div class="catIcon">
+                <ion-icon src="../../assets/icon/electrician.svg"></ion-icon>
+              </div>
+              <p>Electrician</p>
+            </td>
+
+            <td align="center">
+              <div class="catIcon">
+                <ion-icon src="../../assets/icon/plumber.svg"></ion-icon>
+              </div>
+              <p>Plumber</p>
+            </td>
+
+            <td align="center">
+              <div class="catIcon">
+                <ion-icon src="../../assets/icon/coffee-shop.svg"></ion-icon>
+              </div>
+              <p>Welder</p>
+            </td>
+
+            <td align="center">
+              <div class="catIcon">
+                <ion-icon src="../../assets/icon/carpenter.svg"></ion-icon>
+              </div>
+              <p>Carpenter</p>
+            </td>
+          </tr>
+        </table>
+      </div>
+
+    </div>
+
+    <div id="bottomContainer">
+
+      <h3>Most Popular</h3>
+
+      <div id="serviceListContainer">
+
+        <div class="listItem" *ngFor="let i of serviceListMD">
+          <img src="{{ i.img }}" alt="">
+          <div class="contentContainer">
+            <h4>{{ i.name }}</h4>
+            <p style="margin: 0px;">
+              <ion-icon color='success' src="../../assets/icon/time.svg"></ion-icon>
+              {{ i.availableTimeSlot }}
+            </p>
+            <p style="margin: 8px 0px 8px 0px;">
+              <ion-icon src="../../assets/icon/week.svg">
+              </ion-icon> {{ i.availableWeekDays }}
+            </p>
+            <p style="margin: 0px;">
+              <ion-icon src="../../assets/icon/category.svg"></ion-icon>
+              {{ i.category }}
+            </p>
+            <table style="width: 100%;">
+              <tr>
+                <td>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                </td>
+
+                <td align="right">
+                  <ion-button fill="clear" size="small" (click)="goToView(i)">View</ion-button>
+                </td>
+              </tr>
+            </table>
+
+          </div>
+        </div>
+
+      </div>
+    </div>
+
   </div>
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <ion-title>@2021 Handyman| All right reserved.</ion-title>
+  </ion-toolbar>
+</ion-footer>
